<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.seaman.andrew.homeautomation.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/usernameText"
        android:text="Andrew"
        android:ems="10"
        android:id="@+id/inUsername"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/passwordText"
        android:text="pass"
        android:ems="10"
        android:id="@+id/inPassword"
        android:layout_below="@+id/inUsername"
        android:layout_alignLeft="@+id/inUsername" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonText"
        android:id="@+id/loginButton"
        android:layout_below="@+id/inUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp" />

</RelativeLayout>
